Organizing the files

--- a/base_templates/global/pages/search.html
+++ b/base_templates/global/pages/search.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="main-content main-content-list container">
         {% for recipe in recipes %}
-            {% include '../partials/recipe-cards.html' %}
+            {% include 'recipes/partials/recipe-cards.html' %}
         {% endfor %}
     </div>
 {% endblock content %}
