--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -17,26 +17,26 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="{% static 'recipes/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'global/css/styles.css' %}">
 
     <!-- Title -->
     <title>{% block title %}{% endblock title %}Recipes</title>
 </head>
 <body>
     <!-- Including the header -->
-    {% include 'recipes/partials/header.html' %}
+    {% include 'global/partials/header.html' %}
 
     <!-- Including the search-bar form -->
-    {% include 'recipes/partials/search-bar.html' %}
+    {% include 'global/partials/search-bar.html' %}
 
     <!-- Including the Recipe Cards -->
     <main class="main-content-container">
         {% block content %}{% endblock content %}
-        {% include 'recipes/partials/pagination.html' %}
+        {% include 'global/partials/pagination.html' %}
     </main>
 
     <!-- Including the Footer -->
-    {% include 'recipes/partials/footer.html' %}
+    {% include 'global/partials/footer.html' %}
 </body>
 
 </html>
