CRUD of the author recipe completed

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -37,6 +37,9 @@
 
     <!-- Including the Footer -->
     {% include 'global/partials/footer.html' %}
+
+    <!-- Including Script JS -->
+    <script src="{% static 'global/js/scripts.js' %}"></script>
 </body>
 
 </html>
