adding a navbar and changing the recipes category logic

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -26,6 +26,9 @@
     <!-- Including the header -->
     {% include 'global/partials/header.html' %}
 
+    <!-- Including the Navbar -->
+    {% include "global/partials/navbar.html" %}
+
     <!-- Including the search-bar form -->
     {% include 'global/partials/search-bar.html' %}
 
